# prism

./: .gitignore  pyproject.toml  setup.py
prism/: __init__.py  light.py  prism.py
prism/lifx_client/: __init__.py  lifx.py
prism/schemas/: configuration.schema.prism.json  se.novafaen.prism.lightstate.v1.json
prism/yeelight_client/: __init__.py  yeelight.py
tests/: test_prism.py
