[tool.poetry]
name = "prism"
version = "0.1.0"
description = "Let there be light!"
authors = ["Kristoffer Nilsson-Chavez <kristoffer@novafaen.se>"]
homepage = "http://smrt.novafaen.se/"

[tool.poetry.dependencies]
python = "^3.8"
smrt = { git = "https://github.com/novafaen/smrt.git", branch = "master" }
lifxlan = "^1.2.5"
yeelight = "0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.4.4"
pydocstyle = "^5.0.2"
pycodestyle = "^2.5.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
